Remainder of Iain's note has been added

--- a/ANA-EXOT-2019-32-INT1-defs.sty
+++ b/ANA-EXOT-2019-32-INT1-defs.sty
@@ -16,3 +16,13 @@
 \newcommand{\chiDM}{\ensuremath{\chi}\xspace}
 \newcommand{\mdm}{\ensuremath{m_{\chiDM}}\xspace}
 \newcommand{\mDM}{\mdm}
+\newcommand*{\ntrk}{\ensuremath{n_{\textrm{track}}}\xspace}
+\newcommand*{\nqg}{\ensuremath{n_{\textrm{qg}}}\xspace}
+\def\QQ{{\textbf{QQ}}}
+\def\GG{{\textbf{GG}}}
+\def\QG{{\textbf{QG}}}
+\def\JJ{{\textbf{JJ}}}
+\def\integLumi{37.4~fb$^{-1}$} %some plots still 14.2
+\def\pT{\ensuremath{p_{\mathrm T}}}
+\def\yB{\ensuremath{y_B}}
+\def\ystar{\ensuremath{y^\ast}}
