--- a/ANA-EXOT-2019-32-INT1.bib
+++ b/ANA-EXOT-2019-32-INT1.bib
@@ -1,1 +1,264 @@
 % Put you own bibliography entries in this file
+
+
+@Article{Baur:1987ga,
+     author    = "Baur, U. and Hinchliffe, I. and Zeppenfeld, D.",
+     title     = "{Excited quark production at hadron colliders}",
+     journal   = "Int. J. Mod. Phys.",
+     volume    = "A2",
+     year      = "1987",
+     pages     = "1285",
+     doi       = "10.1142/S0217751X87000661",
+     SLACcitation  = "%%CITATION = IMPAE,A2,1285;%%"
+}
+@Article{Baur:1989kv,
+     author    = "Baur, U. and Spira, M. and Zerwas, P. M.",
+     title     = "{Excited quark and lepton production at hadron colliders}",
+     journal   = "Phys. Rev.",
+     volume    = "D42",
+     year      = "1990",
+     pages     = "815--825",
+     doi       = "10.1103/PhysRevD.42.815",
+     SLACcitation  = "%%CITATION = PHRVA,D42,815;%%"
+}
+
+
+@article{Chala:2015ama,
+        author         = "Chala, Mikael and Kahlhoefer, Felix and McCullough,
+        Matthew and Nardini, Germano and Schmidt-Hoberg, Kai",
+        title          = "{Constraining Dark Sectors with Monojets and Dijets}",
+        journal        = "JHEP",
+        volume         = "07",
+        year           = "2015",
+        pages          = "089",
+        doi            = "10.1007/JHEP07(2015)089",
+        eprint         = "1503.05916",
+        archivePrefix  = "arXiv",
+        primaryClass   = "hep-ph",
+        reportNumber   = "DESY-15-036, CERN-PH-TH-2015-057",
+        SLACcitation   = "%%CITATION = ARXIV:1503.05916;%%"
+}
+
+@article{Chizhov:2010jg,
+      author         = "Chizhov, M. V. and Bednyakov, V. A. and Budagov, J. A.",
+      title          = "{A unique signal of excited bosons in dijet data from
+                        pp-collisions}",
+      journal        = "Phys. Atom. Nucl.",
+      volume         = "75",
+      year           = "2012",
+      pages          = "90-96",
+      doi            = "10.1134/S1063778812010061",
+      eprint         = "1010.2648",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1010.2648;%%"
+}
+
+@article{Chizhov:2010ry,
+      author         = "Chizhov, M. V.",
+      title          = "{A Reference Model for Anomalously Interacting Bosons}",
+      journal        = "Phys. Part. Nucl. Lett.",
+      volume         = "8",
+      year           = "2011",
+      pages          = "512-516",
+      doi            = "10.1134/S1547477111060045",
+      eprint         = "1005.4287",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1005.4287;%%"
+}
+
+@article{Chizhov:2009fc,
+      author         = "Chizhov, M. V. and Dvali, Gia",
+      title          = "{Origin and Phenomenology of Weak-Doublet Spin-1 Bosons}",
+      journal        = "Phys. Lett.",
+      volume         = "B703",
+      year           = "2011",
+      pages          = "593-598",
+      doi            = "10.1016/j.physletb.2011.08.056",
+      eprint         = "0908.0924",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2009-146",
+      SLACcitation   = "%%CITATION = ARXIV:0908.0924;%%"
+}
+
+
+
+@techreport{Bauce:2226443,
+      author        = "Bauce, Matteo and Allen, Benjamin William and Akesson,
+                       Torsten and Amidei, Dante and Bawa, Harinder Singh and
+                       Bertram, Iain Alexander and Doglioni, Caterina and Facini,
+                       Gabriel and Frate, Meghan and Frost, James and Grud,
+                       Christopher and Kellermann, Edgar and Malaescu, Bogdan and
+                       Messina, Andrea and Pachal, Katherine and Poulsen, Trine
+                       and Searcy, Jacob and Sekhon, Karishma and Strom, David and
+                       Vanadia, Marco and Veeraraghavan, Venkatesh and Whitmore,
+                       Ben William and Whiteson, Daniel and Zhang, Dengfeng and
+                       Brazickas, Marijus and Hankache, Robert and Edgar, Ryan
+                       Christopher and Boveia, Antonio and Kalderon, Charles
+                       William and Tolley, Emma",
+      title         = "{Search for New Phenomena in Dijet Events with the ATLAS
+                       detector at $\sqrt{s}$=13 TeV using 2015 and 2016 data}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2016-1495",
+      month         = "10",
+      year          = "2016",
+      reportNumber  = "ATL-COM-PHYS-2016-1495",
+      url           = "https://cds.cern.ch/record/2226443",
+}
+
+@article{Harris:2011bh,
+      author         = "Harris, Robert M. and Kousouris, Konstantinos",
+      title          = "{Searches for dijet resonances at hadron colliders}",
+      journal        = "Int. J. Mod. Phys.",
+      volume         = "A26",
+      year           = "2011",
+      pages          = "5005--5055",
+      doi            = "10.1142/S0217751X11054905",
+      eprint         = "1110.5302",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-11-567, CERN-OPEN-2011-044",
+      SLACcitation   = "%%CITATION = ARXIV:1110.5302;%%"
+}
+
+@Article{pythia8,
+     author    = "Sjostrand,T. and Mrenna, S. and Skands, P.",
+     title     = "{A brief introduction to Pythia 8.1}",
+     journal        = "Comput. Phys. Commun.",
+     volume         = "178",
+     year           = "2008",
+     pages          = "852--867",
+     doi            = "10.1016/j.cpc.2008.01.036",
+     eprint         = "0710.3820",
+     archivePrefix  = "arXiv",
+     primaryClass   = "hep-ph",
+     reportNumber   = "CERN-LCGAPP-2007-04, LU-TP-07-28,
+                       FERMILAB-PUB-07-512-CD-T",
+     SLACcitation   = "%%CITATION = ARXIV:0710.3820;%%"
+}
+@booklet{A14tune,
+     author    = "{ATLAS~Collaboration}",
+     title     = "{ATLAS Run~1 Pythia~8 tunes}",
+     journal   = "{ATLAS-PHYS-PUB-2014-021}",
+     url       = "http://cds.cern.ch/record/1966419",
+     year      = {2014}
+}
+@booklet{AU2tune,
+     author    = "{ATLAS~Collaboration}",
+     title     = "{Summary of ATLAS Pythia~8 tunes}",
+     year      = "2012",
+     howpublished   = "{ATL-PHYS-PUB-2012-003}",
+     url       = "http://cds.cern.ch/record/1474107"
+}
+@article{Ball:2012cx,
+      author         = "Ball, Richard D. and others",
+      title          = "{Parton distributions with LHC data}",
+      journal        = "Nucl. Phys.",
+      volume         = "B867",
+      year           = "2013",
+      pages          = "244--289",
+      doi            = "10.1016/j.nuclphysb.2012.10.003",
+      eprint         = "1207.1303",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "EDINBURGH-2012-08, IFUM-FT-997, FR-PHENO-2012-014,
+                        RWTH-TTK-12-25, CERN-PH-TH-2012-037, SFB-CPP-12-47\,
+                        --CERN-PH-TH-2012-037",
+      SLACcitation   = "%%CITATION = ARXIV:1207.1303;%%"
+}
+
+@inproceedings{Carrazza:2013axa,
+      author         = "Carrazza, Stefano and Forte, Stefano and Rojo, Juan",
+      title          = "{Parton Distributions and Event Generators}",
+      booktitle      = "{Proceedings, 43rd International Symposium on
+                        Multiparticle Dynamics (ISMD 13)}",
+      year           = "2013",
+      url            = "http://inspirehep.net/record/1266070/files/arXiv:1311.5887.pdf",
+      pages          = "89-096",
+      eprint         = "1311.5887",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1311.5887;%%"
+}
+
+
+
+@misc{ATLAS:Exot2Derivation,
+  author        = "{DerivationProductionTeam}",
+  title         = "{Exotics derivation twiki page}",
+  url           = "https://twiki.cern.ch/twiki/bin/view/AtlasProtected/DerivationframeworkExotics"
+}
+
+
+
+
+@article{Abercrombie:2015wmb,
+        author         = "Abercrombie, Daniel and others",
+        title          = "{Dark Matter Benchmark Models for Early LHC Run-2
+        Searches: Report of the ATLAS/CMS Dark Matter Forum}",
+        year           = "2015",
+        eprint         = "1507.00966",
+        archivePrefix  = "arXiv",
+        primaryClass   = "hep-ex",
+        reportNumber   = "FERMILAB-PUB-15-282-CD",
+        SLACcitation   = "%%CITATION = ARXIV:1507.00966;%%"
+}
+
+
+@article{RandallMeade,
+  author = "Meade, P. and Randall, L.",
+  title = "{Black holes and quantum gravity at the LHC}",
+  journal = {JHEP05},
+  volume = {2008},
+  pages = {003},
+  year = {2008},
+  eprint = {0708.3017},
+  archivePrefix = "arXiv",
+  primaryClass  =  "hep-ph",
+  doi = "10.1088/1126-6708/2008/05/003"
+}
+@Article{Feng:2004,
+      author         = "Anchordoqui, Luis A. and Feng, Jonathan L. and Goldberg,
+                        Haim and Shapere, Alfred D.",
+      title          = "{Inelastic black hole production and large extra
+                        dimensions}",
+      journal        = "Phys. Lett.",
+      volume         = "B594",
+      year           = "2004",
+      pages          = "363--367",
+      doi            = "10.1016/j.physletb.2004.05.051",
+      eprint         = "hep-ph/0311365",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "NUB-3243-TH-03, UCI-TR-2003-30, UK-03-15",
+      SLACcitation   = "%%CITATION = HEP-PH/0311365;%%"
+}
+
+@article{Dai:2007ki,
+      author         = "Dai, De-Chang and Starkman, Glenn and Stojkovic, Dejan
+                        and Issever, Cigdem and Rizvi, Eram and Tseng, Jeff",
+      title          = "{BlackMax: a black-hole event generator with rotation,
+                        recoil, split branes, and brane tension}",
+      journal        = "Phys. Rev.",
+      volume         = "D77",
+      year           = "2008",
+      pages          = "076007",
+      doi            = "10.1103/PhysRevD.77.076007",
+      eprint         = "0711.3012",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0711.3012;%%"
+}
+
+
+
+@booklet{Marshall:2016630,
+  author        = "Marshall, Zach",
+  title         = "{Re-re-defining the standard QCD di-jet samples: beginning to like event weights}",
+  howpublished        = "{ATL-COM-PHYS-2015-417}",
+  year          = "2015",
+  url           = "https://cds.cern.ch/record/2016630",
+}
