Add text for string samples

--- a/ANA-EXOT-2019-32-INT1-defs.sty
+++ b/ANA-EXOT-2019-32-INT1-defs.sty
@@ -26,3 +26,10 @@
 \def\pT{\ensuremath{p_{\mathrm T}}}
 \def\yB{\ensuremath{y_B}}
 \def\ystar{\ensuremath{y^\ast}}
+
+% Strings
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\Ms}{\ensuremath{M_\mathrm{s}}\xspace}
+\newcommand{\str}{\textsc{Strings}\xspace}
+\newcommand{\pythia}{\textsc{Pythia}\xspace}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
