--- a/ANA-EXOT-2019-32-INT1.bib
+++ b/ANA-EXOT-2019-32-INT1.bib
@@ -262,3 +262,400 @@
   year          = "2015",
   url           = "https://cds.cern.ch/record/2016630",
 }
+
+% Strings citations
+
+@article{Antoniadis:2000ena,
+    author = "Antoniadis, Ignatios and Kiritsis, E. and Tomaras, T.N.",
+    title = "{A D-brane alternative to unification}",
+    eprint = "hep-ph/0004214",
+    archivePrefix = "arXiv",
+    reportNumber = "CPHT-S044-0400, CRETE-00-12",
+    doi = "10.1016/S0370-2693(00)00733-4",
+    journal = "Phys. Lett. B",
+    volume = "486",
+    pages = "186--193",
+    year = "2000"
+}
+@inproceedings{Cremades:2002qm,
+    author = "Cremades, D. and Ibanez, L.E. and Marchesano, F.",
+    title = "{More about the standard model at intersecting branes}",
+    booktitle = "{10th International Conference on Supersymmetry and Unification of Fundamental Interactions (SUSY02)}",
+    eprint = "hep-ph/0212048",
+    archivePrefix = "arXiv",
+    reportNumber = "FTUAM-02-29, IFT-UAM-CSIC-02-48",
+    month = "12",              
+    year = "2002"
+}
+@article{Antoniadis:2002qm,
+    author = "Antoniadis, I. and Kiritsis, E. and Rizos, J. and Tomaras, T.N.",
+    title = "{D-branes and the standard model}",
+    eprint = "hep-th/0210263",
+    archivePrefix = "arXiv",
+    reportNumber = "CERN-TH-2002-272",
+    doi = "10.1016/S0550-3213(03)00256-6",
+    journal = "Nucl. Phys. B",
+    volume = "660",
+    pages = "81--115",
+    year = "2003"
+}                
+@article{Blumenhagen:2006ci,
+    author = "Blumenhagen, Ralph and Kors, Boris and Lust, Dieter and Stieberger, Stephan",
+    title = "{Four-dimensional String Compactifications with D-Branes, Orientifolds and Fluxes}",
+    eprint = "hep-th/0610327",
+    archivePrefix = "arXiv",
+    reportNumber = "CERN-PH-TH-2006-218",
+    doi = "10.1016/j.physrep.2007.04.003",
+    journal = "Phys. Rept.",
+    volume = "445",
+    pages = "1--193",
+    year = "2007"
+}
+@article{Cullen:2000ef,
+    author = "Cullen, Schuyler and Perelstein, Maxim and Peskin, Michael E.",
+    title = "{TeV strings and collider probes of large extra dimensions}",
+    eprint = "hep-ph/0001166",
+    archivePrefix = "arXiv",
+    reportNumber = "SLAC-PUB-8319, SU-ITP-99-53",
+    doi = "10.1103/PhysRevD.62.055012",
+    journal = "Phys. Rev. D",
+    volume = "62",
+    pages = "055012",
+    year = "2000"
+}
+@article{ArkaniHamed:1998rs, 
+     author         = "Arkani-Hamed, Nima and Dimopoulos, Savas and Dvali, G.
+                        R.",
+      title          = "{The Hierarchy problem and new dimensions at a
+                        millimeter}",
+      journal        = "Phys. Lett.",
+      volume         = "B429",
+      year           = "1998",
+      pages          = "263-272",
+      doi            = "10.1016/S0370-2693(98)00466-3",
+      eprint         = "hep-ph/9803315",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-7769, SU-ITP-98-13",
+      SLACcitation   = "%%CITATION = HEP-PH/9803315;%%"
+}
+@article{Antoniadis:1998ig,
+      author         = "Antoniadis, Ignatios and Arkani-Hamed, Nima and
+                        Dimopoulos, Savas and Dvali, G. R.",
+      title          = "{New dimensions at a millimeter to a Fermi and
+                        superstrings at a TeV}",
+      journal        = "Phys. Lett.",
+      volume         = "B436",
+      year           = "1998",
+      pages          = "257-263",
+      doi            = "10.1016/S0370-2693(98)00860-0",
+      eprint         = "hep-ph/9804398",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-7801, SU-ITP-98-28, CPTH-S608-0498, IC-98-39",
+      SLACcitation   = "%%CITATION = HEP-PH/9804398;%%"
+}
+@article{Lust:2008qc,
+    author = "Lust, Dieter and Stieberger, Stephan and Taylor, Tomasz R.",
+    title = "{The LHC String Hunter's Companion}",
+    eprint = "0807.3333",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "MPP-2008-05, LMU-ASC-38-08",
+    doi = "10.1016/j.nuclphysb.2008.09.012",
+    journal = "Nucl. Phys. B",
+    volume = "808",
+    pages = "1--52",
+    year = "2009"
+}
+@article{Anchordoqui:2008hi,
+    author = "Anchordoqui, Luis A. and Goldberg, Haim and Taylor, Tomasz R.",
+    title = "{Decay widths of lowest massive Regge excitations of open strings}",
+    eprint = "0806.3420",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "LMU-ASC-36-08",
+    doi = "10.1016/j.physletb.2008.09.003",
+    journal = "Phys. Lett. B",
+    volume = "668",
+    pages = "373--377",
+    year = "2008"
+}
+@article{Anchordoqui:2007da,
+    author = "Anchordoqui, Luis A. and Goldberg, Haim and Nawata, Satoshi and Taylor, Tomasz R.",
+    title = "{Jet signals for low mass strings at the LHC}",
+    eprint = "0712.0386",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2007-182, NUB-TH-3261",
+    doi = "10.1103/PhysRevLett.100.171603",
+    journal = "Phys. Rev. Lett.",
+    volume = "100",
+    pages = "171603",
+    year = "2008"
+}
+@article{Anchordoqui:2009mm,
+    author = "Anchordoqui, Luis A. and Goldberg, Haim and Lust, Dieter and Nawata, Satoshi and Stieberger, Stephan and Taylor, Tomasz R.",
+    title = "{LHC Phenomenology for String Hunters}",
+    eprint = "0904.3547",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2009-42, LMU-ASC-18-09",
+    doi = "10.1016/j.nuclphysb.2009.06.023",
+    journal = "Nucl. Phys. B",
+    volume = "821",
+    pages = "181--196",
+    year = "2009"
+}
+@article{Kitazawa:2010gh,
+    author = "Kitazawa, Noriaki",
+    title = "{A Closer look at string resonances in dijet events at the LHC}",
+    eprint = "1008.4989",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1007/JHEP10(2010)051",
+    journal = "JHEP",
+    volume = "10",
+    pages = "051",
+    year = "2010"
+}
+@article{Anchordoqui:2014wha,
+    author = "Anchordoqui, Luis A. and Antoniadis, Ignatios and Dai, De-Chang an
+d Feng, Wan-Zhe and Goldberg, Haim and Huang, Xing and Lust, Dieter and Stojkovic, Dejan and Taylor, Tomasz R.",
+    title = "{String Resonances at Hadron Colliders}",
+    eprint = "1407.8120",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2014-314, LMU-ASC-48-14, CERN-PH-TH-2014-143, MPP--2014--314",
+    doi = "10.1103/PhysRevD.90.066013",
+    journal = "Phys. Rev. D",
+    volume = "90",
+    number = "6",
+    pages = "066013",
+    year = "2014"
+}
+@article{ATLAS:2012pu,
+      author         = "Aad, Georges and others",
+      title          = "{ATLAS search for new phenomena in dijet mass and angular
+                        distributions using $pp$ collisions at $\sqrt{s}=7$ TeV}",
+      collaboration  = "ATLAS",
+      journal        = "JHEP",
+      volume         = "01",
+      year           = "2013",
+      pages          = "029",
+      doi            = "10.1007/JHEP01(2013)029",
+      eprint         = "1210.1718",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2012-257",
+      SLACcitation   = "%%CITATION = ARXIV:1210.1718;%%"
+}
+@article{Chatrchyan:2011ns,
+    author = "Chatrchyan, Serguei and others",
+    collaboration = "CMS",
+    title = "{Search for Resonances in the Dijet Mass Spectrum from 7 TeV pp Collisions at CMS}",
+    eprint = "1107.4771",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-PH-EP-2011-119, CMS-EXO-11-015",
+    doi = "10.1016/j.physletb.2011.09.015",
+    journal = "Phys. Lett. B",
+    volume = "704",
+    pages = "123--142",
+    year = "2011"
+}
+@article{CMS:2012yf,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for Narrow Resonances and Quantum Black Holes in
+                        Inclusive and $b$-Tagged Dijet Mass Spectra from $pp$
+                        Collisions at $\sqrt{s}=7$ TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "01",
+      year           = "2013",
+      pages          = "013",
+      doi            = "10.1007/JHEP01(2013)013",
+      eprint         = "1210.2387",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EXO-11-094, CERN-PH-EP-2012-277",
+      SLACcitation   = "%%CITATION = ARXIV:1210.2387;%%"
+}
+@article{Khachatryan:2015sja,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Search for resonances and quantum black holes using
+                        dijet mass spectra in proton-proton collisions at
+                        $\sqrt{s} = 8$ TeV}",
+      collaboration  = "CMS",
+      journal        = "Phys. Rev.",
+      volume         = "D91",
+      year           = "2015",
+      number         = "5",
+      pages          = "052009",
+      doi            = "10.1103/PhysRevD.91.052009",
+      eprint         = "1501.04198",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EXO-12-059, CERN-PH-EP-2014-300",
+      SLACcitation   = "%%CITATION = ARXIV:1501.04198;%%"
+}
+@article{Khachatryan:2015dcf,
+    author = "Khachatryan, Vardan and others",
+    collaboration = "CMS",
+    title = "{Search for narrow resonances decaying to dijets in proton-proton collisions at $\sqrt(s) =$ 13 TeV}",
+    eprint = "1512.01224",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CMS-EXO-15-001, CERN-PH-EP-2015-317",
+    doi = "10.1103/PhysRevLett.116.071801",
+    journal = "Phys. Rev. Lett.",
+    volume = "116",
+    number = "7",
+    pages = "071801",
+    year = "2016"
+}                  
+@article{Sirunyan:2018xlo,
+    author = "Sirunyan, Albert M and others",
+    collaboration = "CMS",
+    title = "{Search for narrow and broad dijet resonances in proton-proton collisions at $ \sqrt{s}=13 $ TeV and constraints on dark matter mediators and other new particles}",
+    eprint = "1806.00843",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CMS-EXO-16-056, CERN-EP-2018-123",
+    doi = "10.1007/JHEP08(2018)130",
+    journal = "JHEP",
+    volume = "08",
+    pages = "130",
+    year = "2018"
+}
+@article{Gingrich:2008di,
+    author = "Gingrich, Douglas M. and Martell, Kevin",
+    title = "{Study of highly-excited string states at the Large Hadron Collider}",
+    eprint = "0808.2512",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevD.78.115009",
+    journal = "Phys. Rev. D",
+    volume = "78",
+    pages = "115009",
+    year = "2008"
+}
+@article{Vakilipourtakalou:2018pfo,
+    author = "Vakilipourtakalou, Pourya and Gingrich, Douglas M.",
+    title = "{Monte Carlo event generator for the production and decay of string resonances in proton-proton collisions}",
+    eprint = "1811.07458",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "11",
+    year = "2018"
+}
+% Pythia8
+@article{Sjostrand:2014zea,
+      author         = "Sj{\"o}strand, Torbj{\"o}rn and Ask, Stefan and Christiansen,
+                        Jesper R. and Corke, Richard and Desai, Nishita and Ilten,
+                        Philip and Mrenna, Stephen and Prestel, Stefan and
+                        Rasmussen, Christine O. and Skands, Peter Z.",
+      title          = "{An Introduction to PYTHIA 8.2}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "191",
+      year           = "2015",
+      pages          = "159",
+      doi            = "10.1016/j.cpc.2015.01.024",
+      eprint         = "1410.3012",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LU-TP-14-36, MCNET-14-22, CERN-PH-TH-2014-190,
+                        FERMILAB-PUB-14-316-CD, DESY-14-178, SLAC-PUB-16122,
+                        --FERMILAB-PUB-14-316-CD",
+      SLACcitation   = "%%CITATION = ARXIV:1410.3012;%%"
+}
+@Booklet{ATL-PHYS-PUB-2014-021,
+    author         = "{ATLAS Collaboration}",
+    title          = "{ATLAS Pythia~8 tunes to 7~TeV data}",
+    howpublished   = "{ATL-PHYS-PUB-2014-021}",
+    url            = "https://cds.cern.ch/record/1966419",
+    year           = "2014",
+}
+@article{Pumplin:2002vw,
+      author         = "Pumplin, J. and Stump, D. R. and Huston, J. and Lai, H.
+                        L. and Nadolsky, Pavel M. and Tung, W. K.",
+      title          = "{New generation of parton distributions with
+                        uncertainties from global QCD analysis}",
+      journal        = "JHEP",
+      volume         = "07",
+      year           = "2002",
+      pages          = "012",
+      doi            = "10.1088/1126-6708/2002/07/012",
+      eprint         = "hep-ph/0201195",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MSU-HEP-011101",
+      SLACcitation   = "%%CITATION = HEP-PH/0201195;%%"
+}
+% EvtGen
+@Article{Lange:2001uf,
+      author         = "Lange, D. J.",
+      title          = "{The EvtGen particle decay simulation package}",
+      booktitle      = "{Proceedings, 7th International Conference on B physics
+                        at hadron machines (BEAUTY 2000)}",
+      journal        = "Nucl. Instrum. Meth. A",
+      volume         = "462",
+      year           = "2001",
+      pages          = "152",
+      doi            = "10.1016/S0168-9002(01)00089-4",
+      SLACcitation   = "%%CITATION = NUIMA,A462,152;%%"
+}
+% NNPDF 2.3 PDFs
+@article{Ball:2012cx,
+      author         = "Ball, Richard D. and others",
+      title          = "{Parton distributions with LHC data}",
+      journal        = "Nucl. Phys. B",
+      volume         = "867",
+      year           = "2013",
+      pages          = "244",
+      doi            = "10.1016/j.nuclphysb.2012.10.003",
+      eprint         = "1207.1303",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "EDINBURGH-2012-08, IFUM-FT-997, FR-PHENO-2012-014,
+                        RWTH-TTK-12-25, CERN-PH-TH-2012-037, SFB-CPP-12-47\,
+                        --CERN-PH-TH-2012-037",
+      SLACcitation   = "%%CITATION = ARXIV:1207.1303;%%"
+}
+@Booklet{ATL-PHYS-PUB-2016-017,
+    author         = "{ATLAS Collaboration}",
+    title          = "{The Pythia~8 A3 tune description of ATLAS minimum bias and inelastic measurements incorporating the Donnachie--Landshoff diffractive model}",
+    howpublished   = "{ATL-PHYS-PUB-2016-017}",
+    url            = "https://cds.cern.ch/record/2206965",
+    year           = "2016",
+}
+@article{Alwall:2006yp,
+    author = "Alwall, Johan and others",
+    title = "{A Standard format for Les Houches event files}",
+    eprint = "hep-ph/0609017",
+    archivePrefix = "arXiv",
+    reportNumber = "FERMILAB-PUB-06-337-T, CERN-LCGAPP-2006-03",
+    doi = "10.1016/j.cpc.2006.11.010",
+    journal = "Comput. Phys. Commun.",
+    volume = "176",
+    pages = "300--304",
+    year = "2007"
+}
+@article{Buckley:2014ana,
+      author         = "Buckley, Andy and Ferrando, James and Lloyd, Stephen and
+                        Nordstr{\" o}m, Karl and Page, Ben and R{\" u}fenacht, Martin and
+                        Schönherr, Marek and Watt, Graeme",
+      title          = "{LHAPDF6: parton density access in the LHC precision
+                        era}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C75",
+      year           = "2015",
+      pages          = "132",
+      doi            = "10.1140/epjc/s10052-015-3318-8",
+      eprint         = "1412.7420",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "GLAS-PPE-2014-05, MCNET-14-29, IPPP-14-111, DCPT-14-222",
+      SLACcitation   = "%%CITATION = ARXIV:1412.7420;%%"
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
