--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -39,6 +39,7 @@
 %  full                  Full set of packages.
 \usepackage{multirow}
 \usepackage{pdflscape}
+\usepackage{rotating}
 %-------------------------------------------------------------------------------
 % Style file with biblatex options for ATLAS documents.
 \usepackage{\ATLASLATEXPATH atlasbiblatex}
@@ -181,6 +182,8 @@ The list should be printed either here or before the Table of Contents.
 \appendix
 \part*{Appendices}
 \addcontentsline{toc}{part}{Appendices}
+\input{include/appendix.tex}
+\clearpage
 %-------------------------------------------------------------------------------
 
 In an ATLAS note, use the appendices to include all the technical details of your work
